<resources>
    <string name="app_name">BallinApp</string>
    <string name="logo">Logo</string>
    <string name="facebook_app_id">459753434376536</string>
    <string name="login_failed">Login failed..try again!</string>
    <string name="register_bt">register button</string>
    <string name="password_tv">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="team_name_tv">TEAM NAME</string>
    <string name="profile_img_btn">profile image button</string>
    <string name="requests_img_btn">requests image button</string>
    <string name="games_in_town">games in town image button</string>
    <string name="find_image_button">find image button</string>
    <string name="name_placeholder">IME TIMA</string>
    <string name="state_placeholder">DRZAVA</string>
    <string name="city_placeholder">GRAD</string>
    <string name="open">OPEN FOR GAME REQUESTS</string>
    <string name="close">CLOSED FOR GAME REQUESTS</string>
    <string name="plus">12</string>
    <string name="minus">5</string>
    <string name="players">players image button or just image</string>
    <string name="player_name_placeholder">ime igraca</string>
    <string name="birthyear_placeholder">1994</string>
    <string name="contact_placeholder">email@gmail.com</string>
    <string name="nickname">nickname</string>
    <string name="birthyear">birthyear</string>
    <string name="contact">contact</string>
    <string name="player_deleted">Player successfully deleted!</string>
    <string name="tap_to_delete">Tap to delete player!</string>
    <string name="find_by">find teams by:</string>
    <string name="name">name</string>
    <string name="enter_city">enter city to find games:</string>
    <string name="joined_game">You joined this game!</string>
    <string name="tap_to_join">Tap game to join!</string>
    <string name="tap_to_leave">Tap game to cancel!</string>
    <string name="game_left">You left this game</string>
    <string name="img_button">Image Button</string>
    <string name="address">address</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="game_created">Game created!</string>
    <string name="message">message</string>
    <string name="request_sent">Request sent!</string>
    <string name="opened">open</string>
    <string name="closed">closed</string>
    <string name="tap_to_request">Tap team to send game request!</string>
    <string name="from">from:</string>
    <string name="info">info:</string>
    <string name="received_at">Received at:</string>
    <string name="requests">Requests</string>
    <string name="choose_action">Choose your action: </string>
    <string name="accept_request">Accept request</string>
    <string name="reject_request">Reject request</string>
    <string name="toast_accept">Request accepted!</string>
    <string name="toast_reject">Request rejected!</string>
    <string name="my_games">My Games</string>
    <string name="leave_game">Leave game</string>
    <string name="delete_player">Delete player</string>
    <string name="teams">Teams found</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="send_request">Send game request</string>
    <string name="games">Games in town</string>
    <string name="join_game">Join this game</string>
    <string name="submited">Submited!</string>
    <string name="to">TO:</string>
    <string name="sent_at">SENT AT:</string>
    <string name="request_deleted">Request canceled!</string>
    <string name="wrong">Sorry, something went wrong! Try again!</string>
    <string name="cancel_request">Cancel request</string>
    <string name="remove_from_requests">Remove from my requests</string>
    <string name="removed_from_requests">Removed from my requests!</string>
    <string name="invalid_info">You entered invalid info!</string>
    <string name="av_changed">Availability changed!</string>
    <string name="players_string">players</string>
    <string name="wrong_credentials">Wrong credentials! Try again!</string>
</resources>
