<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/update_team_wp"
    tools:context="ballinapp.com.ballinapp.team.UpdateTeam">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:id="@+id/team_name_tv_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/team_name_tv"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/team_name_et_register_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/team_state_tv_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/state"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/team_state_et_register_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/team_city_tv_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/city"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/team_city_et_register_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/team_email_tv_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/team_email_et_register_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/error_tv_update_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="@dimen/_137sdp"
        android:layout_height="@dimen/_44sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/register_bt"
        android:onClick="registerTeam"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/register_project" />

</LinearLayout>
