<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/update_team_wp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_login_activity"
        android:layout_width="@dimen/_125sdp"
        android:layout_height="@dimen/_125sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/state_input_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/team_name_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/city_input_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/password_tv"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/password_login_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/image_button_login_screen"
        android:layout_width="@dimen/_67sdp"
        android:layout_height="@dimen/_48sdp"
        app:srcCompat="@drawable/ballinapp"
        android:contentDescription="@string/img_button"
        android:scaleType="centerInside"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:layout_marginBottom="@dimen/_5sdp"
        android:onClick="login"/>

    <TextView
        android:id="@+id/invalid_input_error_login_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>
